# mafw

./: Makefile.am  autogen.sh  configure.ac  info_about_this_tag  mafw-uninstalled.pc.in  mafw.xml  release_notes  release_notes.txt
checkmore/: Makefile.am  checkmore.c  checkmore.h  checkmore.pc.in
debian/: changelog  checkmore.install  control  copyright  libmafw-doc.doc-base  libmafw0-dev.install  libmafw0.install  rules
doc/: mafw-sections.txt
libmafw/: Makefile.am  mafw-callbas.c  mafw-db.c  mafw-errors.h  mafw-extension.c  mafw-filter.h  mafw-log.h  mafw-metadata-serializer.c  mafw-metadata.h  mafw-playlist.c  mafw-property.h  mafw-renderer.c  mafw-source.c  mafw-source.h  mafw-uri-source.c  mafw-uri-source.h  mafw.h
mafw/: Makefile.am  configure.ac  mafw.pc.in
mafw-gst-renderer/: Makefile.am  configure.ac
mafw-gst-renderer/debian/: changelog
mafw-gst-renderer/libmafw-gst-renderer/: mafw-gst-renderer-worker-volume.c  mafw-gst-renderer-worker.c  mafw-gst-renderer.c
mafw-iradio-source/: Makefile.am  configure.ac
mafw-iradio-source-bookmarks-template/: test.sh
mafw-iradio-source-bookmarks-template/conf/: mafw-iradio-source-bookmarks.confml  mafw-iradio.gcfml  mafw-iradio.xslt
mafw-iradio-source-bookmarks-template/data/: bookmarks.xml
mafw-iradio-source-bookmarks-template/debian/: changelog  control  control.template  install  rules
mafw-iradio-source-bookmarks-template/example-data/: bookmarks.confml
mafw-iradio-source/debian/: changelog
mafw-shared/: Makefile.am  configure.ac
mafw-shared/debian/: changelog
mafw-test-gui/: configure.ac
mafw-test-gui/debian/: changelog
mafw-tracker-source/: Makefile.am  configure.ac
mafw-tracker-source/debian/: changelog
mafw-tracker-source/libmafw-tracker-source/: tracker-iface.c
mafw-upnp-source/: Makefile.am  configure.ac
mafw-upnp-source/debian/: changelog
mafw/checkmore/: Makefile.am  checkmore-uninstalled.pc.in  checkmore.c
mafw/debian/: changelog  control  libmafw-doc.install  libmafw0.install  rules
mafw/doc/: Makefile.am  mafw-docs.sgml  mafw-sections.txt  mafw.types
mafw/libmafw/: Makefile.am  mafw-callbas.h  mafw-db.h  mafw-errors.h  mafw-extension.h  mafw-filter.c  mafw-log.c  mafw-marshal.list  mafw-metadata-serializer.c  mafw-metadata-serializer.h  mafw-metadata.c  mafw-metadata.h  mafw-playlist.c  mafw-playlist.h  mafw-property.h  mafw-registry.c  mafw-registry.h  mafw-renderer.c  mafw-renderer.h  mafw-source.c  mafw-source.h  mafw-uri-source.c
mafw/tests/: Makefile.am  noprenderer.c  nopsource.h  test-mafw-init.c  test-mafw-log.c  test-metadata.c  test-playlist.c  test-renderer.c  test-serialization.c  test.suppressions
tests/: Makefile.am  noprenderer.h  nopsource.c  stress-miwmd.c  test-db.c  test-defaults.c  test-extension.c  test-mafw-extension.c  test-mafw-filter.c  test-mafw-log.c  test-metadata.c  test-registry.c  test-serialization.c
